Replace header icon with logo image

--- a/index.html
+++ b/index.html
@@ -370,8 +370,7 @@
 <body>
 
 <div class="header">
-  <div class="header-icon">AP</div>
-  <div>
+     <img src="logo.jpeg" alt="Logo APavan Engenharia" width="100">
     <h1>APAVAN_ANCORAGEM DAS ARMADURAS</h1>
     <div style="font-size:11px;color:var(--muted);font-family:var(--mono);margin-top:2px">NBR 6118:2023 — Cálculo do Comprimento de Ancoragem</div>
   </div>
